Enhance property listings with area and search updates
Updated property listings with area measurements and improved search functionality.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         html, body { height: 100%; width: 100%; margin: 0; padding: 0; overflow: hidden; font-family: 'Segoe UI', sans-serif; }
         #mi-mapa { height: 100%; width: 100%; position: absolute; top: 0; left: 0; }
 
-        /* Interfaz Superior */
         .header-ui {
             position: absolute; top: 10px; left: 10px; right: 10px; z-index: 1000;
             display: flex; flex-direction: column; gap: 8px;
@@ -32,7 +31,6 @@
         }
         .active { background: #d32f2f !important; color: white !important; }
 
-        /* Botón GPS */
         .gps-btn {
             position: absolute; bottom: 110px; right: 20px; z-index: 1000;
             background: white; width: 50px; height: 50px; border-radius: 50%;
@@ -40,12 +38,12 @@
             box-shadow: 0 4px 12px rgba(0,0,0,0.2); font-size: 22px; cursor: pointer;
         }
 
-        /* Ficha del Inmueble */
         .popup-ficha { width: 230px; padding: 5px; }
         .popup-ficha img { width: 100%; height: 130px; object-fit: cover; border-radius: 12px; margin-bottom: 8px; }
         .broker-tag { font-size: 10px; color: #888; text-transform: uppercase; font-weight: bold; }
-        .precio { color: #d32f2f; font-weight: 800; font-size: 18px; display: block; margin: 4px 0; }
-        .actions { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-top: 12px; }
+        .precio { color: #d32f2f; font-weight: 800; font-size: 18px; display: block; margin: 2px 0; }
+        .medida { font-size: 13px; color: #444; margin-bottom: 8px; display: block; }
+        .actions { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-top: 10px; }
         .btn-act {
             padding: 10px; text-align: center; border-radius: 8px;
             text-decoration: none; color: white !important; font-size: 12px; font-weight: bold;
@@ -57,7 +55,7 @@
     <div class="header-ui">
         <div class="search-bar">
             <span>🔍</span>
-            <input type="text" id="buscador" placeholder="Buscar por nombre o dirección..." onkeyup="filtrarMaestro()">
+            <input type="text" id="buscador" placeholder="Buscar local, bodega o barrio..." onkeyup="filtrarMaestro()">
         </div>
         <div class="filters">
             <button class="btn-f active" onclick="cambiarUso('todos', this)">Todos</button>
@@ -72,18 +70,18 @@
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script>
-        // Inicializamos en Barranquilla
-        var map = L.map('mi-mapa', { zoomControl: false }).setView([10.98, -74.80], 13);
+        var map = L.map('mi-mapa', { zoomControl: false }).setView([10.985, -74.795], 13);
         L.control.zoom({ position: 'bottomright' }).addTo(map);
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
         var baseRuta = "https://acropolisinmo-dot.github.io/mapa-acropolis/";
         
-        // DATOS MANUALES (Punto 10 desactivado por ahora)
+        // --- INVENTARIO CON MEDIDAS 📏 ---
         var locales = [
-            { nombre: "Trupillo", tipo: "local", precio: "2.500.000", coords: [10.9588, -74.7846], foto: "trupillo.jpg", broker: "Acropolis", wa: "573243816458" },
-            { nombre: "Bodega Prado", tipo: "bodega", precio: "4.500.000", coords: [10.9968, -74.7961], foto: "bodega.jpg", broker: "Broker Externo", wa: "573000000000" },
-            { nombre: "Local Pueblito", tipo: "local", precio: "1.200.000", coords: [10.9634, -74.8396], foto: "pueblito.jpg", broker: "Acropolis", wa: "573243816458" }
+            { nombre: "Trupillo", tipo: "local", precio: "2.500.000", area: "45 m²", coords: [10.9588, -74.7846], foto: "trupillo.jpg", broker: "Acropolis", wa: "573243816458" },
+            { nombre: "Bodega Prado", tipo: "bodega", precio: "4.500.000", area: "320 m²", coords: [10.9968, -74.7961], foto: "bodega.jpg", broker: "Broker Externo", wa: "573000000000" },
+            { nombre: "Local Universidad", tipo: "local", precio: "1.800.000", area: "32 m²", coords: [10.9927, -74.7936], foto: "universidad.jpg", broker: "Acropolis", wa: "573243816458" },
+            { nombre: "Local Pueblito", tipo: "local", precio: "1.200.000", area: "25 m²", coords: [10.9634, -74.8396], foto: "pueblito.jpg", broker: "Acropolis", wa: "573243816458" }
         ];
 
         var marcadores = L.layerGroup().addTo(map);
@@ -105,9 +103,10 @@
                             <div class="broker-tag">Inmobiliaria: ${l.broker}</div>
                             <h3 style="margin:2px 0; font-size:17px">${l.nombre}</h3>
                             <span class="precio">$ ${l.precio}</span>
+                            <span class="medida">📏 Área: <b>${l.area}</b></span>
                             <div class="actions">
-                                <a href="https://www.google.com/maps/dir/?api=1&destination=${l.coords[0]},${l.coords[1]}" target="_blank" class="btn-act" style="background:#4285F4">📍 Cómo llegar</a>
-                                <a href="https://wa.me/${l.wa}?text=Hola, info sobre ${l.nombre}" target="_blank" class="btn-act" style="background:#25d366">💬 WhatsApp</a>
+                                <a href="https://www.google.com/maps/dir/?api=1&destination=${l.coords[0]},${l.coords[1]}" target="_blank" class="btn-act" style="background:#4285F4">📍 Ruta</a>
+                                <a href="https://wa.me/${l.wa}?text=Hola, solicito info de: ${l.nombre}" target="_blank" class="btn-act" style="background:#25d366">💬 WhatsApp</a>
                             </div>
                         </div>
                     `);
