--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         .search-bar { background: white; padding: 12px 18px; border-radius: 30px; box-shadow: 0 4px 15px rgba(0,0,0,0.15); display: flex; align-items: center; }
         .search-bar input { border: none; width: 100%; outline: none; font-size: 15px; margin-left: 8px; width: 100%; }
 
-        /* Logo Centrado */
-        .logo-container { width: 100%; display: flex; justify-content: center; align-items: center; margin: 2px 0; }
-        .logo-acropolis { height: 65px; background: transparent; filter: drop-shadow(0px 2px 4px rgba(0,0,0,0.2)); }
+        /* Logo Centrado - AUMENTADO A 85px */
+        .logo-container { width: 100%; display: flex; justify-content: center; align-items: center; margin: 5px 0; }
+        .logo-acropolis { height: 85px; background: transparent; filter: drop-shadow(0px 2px 4px rgba(0,0,0,0.2)); }
 
         /* Filtros */
         .filters { display: flex; gap: 6px; overflow-x: auto; scrollbar-width: none; }
