--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         .search-bar { background: white; padding: 12px 18px; border-radius: 30px; box-shadow: 0 4px 15px rgba(0,0,0,0.15); display: flex; align-items: center; }
         .search-bar input { border: none; width: 100%; outline: none; font-size: 15px; margin-left: 8px; width: 100%; }
 
-        /* Logo Centrado */
+        /* Logo Centrado - Grande (85px) */
         .logo-container { width: 100%; display: flex; justify-content: center; align-items: center; margin: 5px 0; }
         .logo-acropolis { height: 85px; background: transparent; filter: drop-shadow(0px 2px 4px rgba(0,0,0,0.2)); }
 
@@ -23,34 +23,27 @@
         .btn-f { background: white; border: none; padding: 10px 18px; border-radius: 25px; white-space: nowrap; font-size: 12px; font-weight: 600; box-shadow: 0 2px 8px rgba(0,0,0,0.1); cursor: pointer; }
         .active { background: #d32f2f !important; color: white !important; }
 
-        /* BOTÓN GPS CON TEXTO CIRCULAR */
-        .gps-wrapper {
-            position: absolute; bottom: 30px; right: 20px; z-index: 1000;
-            width: 100px; height: 100px; display: flex; align-items: center; justify-content: center;
-        }
-        .gps-btn {
-            width: 55px; height: 55px; background: #d32f2f; color: white;
-            border-radius: 50%; display: flex; align-items: center; justify-content: center;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.3); font-size: 24px; cursor: pointer; border: none; z-index: 10;
-        }
-        .circular-text {
-            position: absolute; width: 100%; height: 100%;
-            animation: rotateText 15s linear infinite;
-        }
-        @keyframes rotateText { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
-        .circular-text text { font-size: 11px; font-weight: bold; fill: #d32f2f; text-transform: uppercase; letter-spacing: 2px; }
+        /* SLIDER DE FOTOS (Solo para Bodega) */
+        .slider-container { width: 100%; height: 150px; overflow-x: scroll; display: flex; scroll-snap-type: x mandatory; border-radius: 12px; scrollbar-width: none; background: #333; }
+        .slider-container::-webkit-scrollbar { display: none; }
+        .slider-container img { width: 100%; height: 150px; object-fit: cover; flex-shrink: 0; scroll-snap-align: start; }
 
-        /* Zoom (Izquierda Inferior) */
+        /* BOTÓN GPS CON TEXTO CIRCULAR GIRATORIO */
+        .gps-wrapper { position: absolute; bottom: 30px; right: 20px; z-index: 1000; width: 100px; height: 100px; display: flex; align-items: center; justify-content: center; }
+        .gps-btn { width: 55px; height: 55px; background: #d32f2f; color: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 12px rgba(0,0,0,0.3); font-size: 24px; cursor: pointer; border: none; z-index: 10; }
+        .circular-text { position: absolute; width: 100%; height: 100%; animation: rotateText 15s linear infinite; }
+        @keyframes rotateText { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
+        .circular-text text { font-size: 10px; font-weight: bold; fill: #d32f2f; text-transform: uppercase; letter-spacing: 2px; }
+
+        /* Zoom (Izquierda Inferior para no tapar al cliente) */
         .leaflet-bottom.leaflet-left { margin-bottom: 20px; margin-left: 10px; }
 
-        /* Popups y Botones */
-        .popup-ficha { width: 230px; text-align: center; }
-        .popup-ficha img { width: 100%; height: 130px; object-fit: cover; border-radius: 12px; }
-        .precio { color: #d32f2f; font-weight: 800; font-size: 18px; display: block; margin: 4px 0; }
-        
+        /* Popups Estilo Marketplace */
+        .popup-ficha { width: 250px; text-align: center; }
+        .precio { color: #d32f2f; font-weight: 800; font-size: 20px; display: block; margin: 5px 0; }
         .grid-botones { display: grid; grid-template-columns: 1fr 1fr; gap: 5px; margin-top: 10px; }
         .btn-act { display: block; padding: 10px; border-radius: 8px; text-decoration: none; color: white !important; font-size: 11px; font-weight: bold; text-align: center; border: none; cursor: pointer; }
-        .btn-full { grid-column: span 2; background: #6c757d; } /* Botón compartir ocupa todo el ancho abajo */
+        .btn-full { grid-column: span 2; background: #6c757d; }
     </style>
 </head>
 <body>
@@ -86,29 +79,50 @@
         map.zoomControl.setPosition('bottomleft');
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
-        var baseRuta = "https://acropolisinmo-dot.github.io/mapa-acropolis/";
+        // Ruta base donde tienes tus carpetas de fotos en GitHub
+        var baseRutaFotos = "https://acropolisinmo-dot.github.io/mapa-acropolis/fotos/";
+
         var locales = [
-            { nombre: "Pueblito (Cra 12)", tipo: "local", precio: "1.700.000", area: "45 mt²", coords: [10.963471, -74.839640], foto: "pueblito.jpg" },
-            { nombre: "Pueblito (Local 3)", tipo: "local", precio: "1.000.000", area: "84 mt²", coords: [10.963471, -74.839641], foto: "pueblito.jpg" },
-            { nombre: "Universidad", tipo: "local", precio: "7.000.000", area: "110 mt²", coords: [10.992707, -74.793603], foto: "universidad.jpg" },
-            { nombre: "Bodega Cra 54", tipo: "bodega", precio: "10.000.000", area: "710 mt²", coords: [10.996854, -74.796166], foto: "bodega.jpg" },
-            { nombre: "Trupillo", tipo: "local", precio: "2.500.000", area: "59 mt²", coords: [10.9588, -74.7847], foto: "trupillo.jpg" },
-            { nombre: "Juan de Acosta", tipo: "local", precio: "1.000.000", area: "30 mt²", coords: [10.828794, -75.038221], foto: "juan.jpg" }
+            { 
+                nombre: "Bodega Cra 54", 
+                tipo: "bodega", 
+                precio: "10.000.000", 
+                area: "710 mt²", 
+                coords: [10.996854, -74.796166], 
+                carpeta: "Bodega 66", 
+                prefijo: "bodega 66 foto ",
+                totalFotos: 6 // Cantidad de fotos que tienes en esa carpeta
+            },
+            { nombre: "Pueblito (Cra 12)", tipo: "local", precio: "1.700.000", area: "45 mt²", coords: [10.963471, -74.839640], carpeta: "", prefijo: "pueblito", totalFotos: 1 },
+            { nombre: "Universidad", tipo: "local", precio: "7.000.000", area: "110 mt²", coords: [10.992707, -74.793603], carpeta: "", prefijo: "universidad", totalFotos: 1 }
         ];
 
         var marcadores = L.layerGroup().addTo(map);
+        var fUso = 'todos';
 
         function filtrarMaestro() {
             marcadores.clearLayers();
             var busqueda = document.getElementById('buscador').value.toLowerCase();
             locales.forEach(function(l) {
-                if (l.nombre.toLowerCase().includes(busqueda)) {
+                if ((fUso === 'todos' || l.tipo === fUso) && l.nombre.toLowerCase().includes(busqueda)) {
+                    
+                    // Lógica para armar el Slider de fotos
+                    let fotosHTML = "";
+                    if(l.totalFotos > 1) {
+                        for(let i=1; i<=l.totalFotos; i++) {
+                            fotosHTML += `<img src="${baseRutaFotos}${l.carpeta}/${l.prefijo}${i}.jpg" onerror="this.src='https://via.placeholder.com/250x150?text=Acropolis+Realty'">`;
+                        }
+                    } else {
+                        fotosHTML = `<img src="${baseRutaFotos}${l.prefijo}.jpg" onerror="this.src='https://via.placeholder.com/250x150?text=Acropolis+Realty'">`;
+                    }
+
                     L.marker(l.coords).addTo(marcadores).bindPopup(`
                         <div class="popup-ficha">
-                            <img src="${baseRuta + l.foto}" onerror="this.src='https://via.placeholder.com/200x130?text=Acropolis'">
-                            <h3>${l.nombre}</h3>
+                            <div class="slider-container">${fotosHTML}</div>
+                            ${l.totalFotos > 1 ? '<small style="color:#888; font-size:10px">↔ Desliza para ver fotos</small>' : ''}
+                            <h3 style="margin:8px 0 0 0">${l.nombre}</h3>
                             <span class="precio">$ ${l.precio}</span>
-                            <span style="font-size:12px">📏 Área: ${l.area}</span>
+                            <span style="font-size:13px">📏 Área: <b>${l.area}</b></span>
                             <div class="grid-botones">
                                 <a href="https://www.google.com/maps/dir/?api=1&destination=${l.coords[0]},${l.coords[1]}" target="_blank" class="btn-act" style="background:#4285F4">📍 Ruta</a>
                                 <a href="https://wa.me/573243816458?text=Info sobre ${l.nombre}" target="_blank" class="btn-act" style="background:#25d366">💬 WhatsApp</a>
@@ -122,9 +136,7 @@
 
         function compartir(nombre, lat, lng) {
             const texto = `Mira este inmueble en Acropolis Realty: ${nombre}. Ubicación: https://www.google.com/maps?q=${lat},${lng}`;
-            navigator.clipboard.writeText(texto).then(() => {
-                alert("¡Enlace copiado! Ya puedes pegarlo en WhatsApp o redes sociales.");
-            });
+            navigator.clipboard.writeText(texto).then(() => { alert("¡Enlace copiado!"); });
         }
 
         function buscarMiUbicacion() { map.locate({setView: true, maxZoom: 16}); }
@@ -132,6 +144,13 @@
             L.circle(e.latlng, {radius: 50, color: '#d32f2f'}).addTo(map);
             L.marker(e.latlng).addTo(map).bindPopup("Estás aquí").openPopup();
         });
+
+        function cambiarUso(val, btn) {
+            document.querySelectorAll('.btn-f').forEach(b => b.classList.remove('active'));
+            btn.classList.add('active');
+            fUso = val;
+            filtrarMaestro();
+        }
 
         window.onload = function() { filtrarMaestro(); };
     </script>
